Padding overflow issue fixed on responsive view

--- a/src/style.css
+++ b/src/style.css
@@ -308,7 +308,7 @@ a {
   /* background-image: var(--image-gradient)/* , url(./Assets/home-bg.jpg) */;
   background-position: top center;
   background-repeat: no-repeat;
-  padding-bottom: 30px !important;
+  /* padding-bottom: 30px !important; */
   padding-top: 30px !important;
 }
 
